--- a/30-days-challenge/DAY-2/index.html
+++ b/30-days-challenge/DAY-2/index.html
@@ -85,6 +85,7 @@ transition:1s all;
   <p><b>The maximum number of chocolates $usruth can eat is :   <span id="sol"> 
   </span></b></p>
   
+  
 </div>
   <script>
 function calculate() {
@@ -95,4 +96,4 @@ function calculate() {
 }
   </script>
 </body>
-</html>s
+</html>
